# courant

./: .gitignore  AndroidManifest.xml  build.gradle  build.xml
doc/: NOTES
gradle/wrapper/: gradle-wrapper.properties
src/au/id/cmears/courant/: MainActivity.java
src/main/: AndroidManifest.xml
src/main/java/au/id/cmears/courant/: MainActivity.java  Run.java  RunInProgressActivity.java  RunService.java  RunStorage.java
src/main/res/layout/: activity_run_in_progress.xml  main.xml
src/main/res/menu/: menu_run_in_progress.xml
src/main/res/values/: strings.xml
web/: Client.hs  Run.hs  Web.hs  courant-web.cabal  draw.js  index.html  stack.yaml
